# cont_api

./: README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 09e8b61a8b02_contacts_new3.py  1c48b68c7f37_contacts_new7.py  1f2a62d82596_contacts_new6.py  2c5723f10f17_contacts_new10.py  34794b7a11e9_contacts_new10.py  37b66babf139_contacts_new10.py  766f32314c81_contacts_new10.py  7ab7bd5087e9_contacts_new1.py  92b48aa00027_contacts_new4.py  93debe9036ee_contacts_new10.py  9e81041238e2_contacts_new8.py  b7fe1b0ad34d_contacts_new.py  b8404c19047b_contacts_new9.py  d121f14da2c5_contacts_new2.py  dc4f5e0d0660_contacts_new5.py
docs/: conf.py  index.rst
docs/source/: main.rst  modules.rst  shema_api.app.rst  shema_api.data.rst  shema_api.fun.rst  shema_api.mod.rst  shema_api.rout.rst  shema_api.rst  shema_api.temp.rst
shema_api/: config.py
shema_api/app/: schema.py
shema_api/data/: base.py
shema_api/fun/: crud.py  dependencies.py  utils.py
shema_api/mod/: models.py
shema_api/rout/: auth.py  ava.py  contacts.py  email.py  reset.py
shema_api/temp/: example_email.html  reset_password_email.html
tests/: conftest.py  test.db  test_create_contact.py  test_database.py  test_database_db.py  test_main.py  test_models.py  test_password_reset_request.py  test_regi.py  test_utils.py
