[tool.poetry]
name = "cont-api"
version = "0.1.0"
description = ""
authors = ["Vasilivi4 <137120278+Vasilivi4@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.19"
libgravatar = "^1.0.4"
cloudinary = "^1.41.0"
sphinx = "^8.1.3"
python-dotenv = "^1.0.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
bcrypt = "3.2.2"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
